--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://QianChen_Homepage.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://kqkq926.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "QianChen_Homepage.github.io"
 
