--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Qian Chen / Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://kqkq926.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://kqkq926.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"https://kqkq926.github.io/QianChen_Homepage.io/
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages"
+repository               : "academicpages/academicpages.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
